--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "8.1.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
