--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@deck.gl/react": "9.1.15",
     "@loaders.gl/core": "4.3.4",
     "@loaders.gl/json": "4.3.4",
+    "@react-three/drei": "^9.56.6",
+    "@react-three/fiber": "^8.15.16",
+    "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
     "deck.gl": "9.1.15",
     "echarts": "5.6.0",
@@ -27,7 +30,9 @@
     "react-leaflet": "^4.2.1",
     "react-map-gl": "8.1.0",
     "react-router-dom": "^6.26.1",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "three": "^0.160.1",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
