--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@react-three/drei": "^9.56.6",
     "@react-three/fiber": "^8.15.16",
     "@tanstack/react-query": "^5.59.15",
+    "@tsparticles/react": "^3.0.0",
     "axios": "^1.7.7",
     "deck.gl": "9.1.15",
     "echarts": "5.6.0",
     "echarts-for-react": "3.0.2",
+    "framer-motion": "^12.23.24",
     "gantt-task-react": "0.3.9",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.554.0",
     "maplibre-gl": "5.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -32,6 +35,7 @@
     "react-router-dom": "^6.26.1",
     "reactflow": "^11.11.4",
     "three": "^0.160.1",
+    "tsparticles": "^3.9.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
