--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "8.1.0",
     "react-router-dom": "^6.26.1",
@@ -46,6 +47,9 @@
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^5.0.3",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.2",
     "vite": "^5.4.8"
   }
