--- a/dipgos-backend/app/fixtures/projects.json
+++ b/dipgos-backend/app/fixtures/projects.json
@@ -9,7 +9,7 @@
     "address": "Mohmand Dam, Mohmand Agency, Pakistan",
     "lat": 34.755,
     "lng": 71.215,
-    "image": "/images/ACCS/mohmand.jpg",
+    "image": "/images/ACCS/chashma.png",
     "geofence_radius_m": 1500
   },
   {
@@ -22,7 +22,7 @@
     "address": "Dasu Hydropower Project, Upper Kohistan, Pakistan",
     "lat": 35.291,
     "lng": 72.103,
-    "image": "/images/ACCS/dasu.jpg",
+    "image": "/images/ACCS/ghazi.png",
     "geofence_radius_m": 1800
   },
   {
@@ -35,7 +35,7 @@
     "address": "Diamer Basha Dam, Gilgit-Baltistan, Pakistan",
     "lat": 35.619,
     "lng": 74.616,
-    "image": "/images/ACCS/diamer.jpg",
+    "image": "/images/ACCS/mangla.png",
     "geofence_radius_m": 2000
   },
   {
@@ -48,7 +48,7 @@
     "address": "Tarbela Power Project, Haripur, Pakistan",
     "lat": 34.088,
     "lng": 72.693,
-    "image": "/images/ACCS/tarbela_5th_extension.jpg",
+    "image": "/images/ACCS/tarbela.png",
     "geofence_radius_m": 1400
   },
   {
@@ -61,7 +61,7 @@
     "address": "Tarbela Dam, Haripur, Pakistan",
     "lat": 34.088,
     "lng": 72.693,
-    "image": "/images/AOS/tarbela.jpg",
+    "image": "/images/ACCS/tarbela.png",
     "geofence_radius_m": 1200
   },
   {
@@ -74,7 +74,7 @@
     "address": "Mangla Dam, Mirpur, Azad Kashmir",
     "lat": 33.135,
     "lng": 73.640,
-    "image": "/images/AOS/mangla.jpg",
+    "image": "/images/ACCS/mangla.png",
     "geofence_radius_m": 1600
   },
   {
@@ -87,7 +87,7 @@
     "address": "Ghazi Barotha Hydropower Project, Attock, Pakistan",
     "lat": 33.969,
     "lng": 72.708,
-    "image": "/images/AOS/ghazi.jpg",
+    "image": "/images/ACCS/ghazi.png",
     "geofence_radius_m": 1300
   },
   {
@@ -100,7 +100,7 @@
     "address": "Chashma Barrage, Mianwali, Pakistan",
     "lat": 32.390,
     "lng": 71.410,
-    "image": "/images/AOS/chasma.jpg",
+    "image": "/images/ACCS/chashma.png",
     "geofence_radius_m": 1500
   },
   {
@@ -113,7 +113,7 @@
     "address": "Bunji, Gilgit-Baltistan, Pakistan",
     "lat": 35.680,
     "lng": 74.617,
-    "image": "/images/CPDS/Bungi_HPP.jpg",
+    "image": "/images/ACCS/ghazi.png",
     "geofence_radius_m": 2100
   },
   {
@@ -126,7 +126,7 @@
     "address": "Harpo, Skardu, Gilgit-Baltistan",
     "lat": 35.330,
     "lng": 74.810,
-    "image": "/images/CPDS/HARPO_HPP.jpg",
+    "image": "/images/ACCS/mangla.png",
     "geofence_radius_m": 1800
   },
   {
@@ -139,7 +139,7 @@
     "address": "Pattan, Kohistan, Pakistan",
     "lat": 35.030,
     "lng": 72.943,
-    "image": "/images/CPDS/Pattan.jpg",
+    "image": "/images/ACCS/chashma.png",
     "geofence_radius_m": 1700
   },
   {
@@ -152,7 +152,7 @@
     "address": "Thakot, Batagram, Pakistan",
     "lat": 34.860,
     "lng": 72.915,
-    "image": "/images/CPDS/Thakot.jpg",
+    "image": "/images/ACCS/tarbela.png",
     "geofence_radius_m": 1600
   }
 ]
