--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@loaders.gl/json": "4.3.4",
     "@react-three/drei": "^9.56.6",
     "@react-three/fiber": "^8.15.16",
-    "@tanstack/react-query": "^5.59.15",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-query": "^5.90.14",
     "@tsparticles/react": "^3.0.0",
+    "autoprefixer": "^10.4.23",
     "axios": "^1.7.7",
     "deck.gl": "9.1.15",
     "echarts": "5.6.0",
@@ -28,6 +30,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.554.0",
     "maplibre-gl": "5.8.0",
+    "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
